# DICOM-mod

./: README.md  pyproject.toml
dicom-mod/: main.py
